massive errors in mobile and web

--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
       </div>
     </label>
     
-    <div>
-      <a  href="#">
-        <img src="../assets/images/bantay_bayan_logo.JPG" alt="logo" width="170">
+    <div class="navLogo">
+      <a href="#">
+        <img src="../assets/images/bantay_bayan_logo.png" alt="logo" width="170">
       </a>
     </div>
 
@@ -92,7 +92,11 @@
   <div class="container">
 
     <div class="main">
-      main
+      <div class="main_content">
+        <img src="../assets/images/bantay_bayan_logo.png">
+        <br>
+        <label>Para sa mabuting pamamahala sa panahon ng krisis!</label>
+      </div>
     </div>
 
     <div class="helpdesk">
@@ -105,9 +109,15 @@
         </p>
         <a href="#">SUBMIT A COMPLAINT</a>
       </div>
+      <div class="helpdesk_pic">
+        <img src="../assets/images/Image.png">
+      </div>
     </div>
 
     <div class="survey">
+      <div>
+        <img class="survey_pic" src="../assets/images/Image.png">
+      </div>
       <div class="survey_content">
         <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
         <p>
@@ -136,7 +146,7 @@
   <footer>
 
     <div class="footerContent">
-        <img src="../assets/images/bantay_bayan_logo.JPG" alt="logo" width="170">
+        <img src="../assets/images/bantay_bayan_logo.png" alt="logo" width="170">
         <div class="footerSubContent">
             <div class="footerIcons">
                 <a href="#"><img src="../assets/images/iconfinder_Rounded_Facebook_svg_5282541.png" alt="logo" width="50"></a>
