homepage almost done lacking links and burger button animation

--- a/public/index.html
+++ b/public/index.html
@@ -53,12 +53,6 @@
       <li><!--Buffer--></li>
       <li>
         <a class="about" href="#">About</a>
-        <div class="aboutdrop">
-          <a href="#">Bantay Bayan</a>
-          <a href="#">Good Gov PH</a>
-          <a href="#">DSC Loyola</a>
-          <a href="#">Partners</a>
-        </div>
       </li>
       <li>
         <a class="forms" href="#">Forms</a>
@@ -70,17 +64,12 @@
       </li>
       <li>
         <a class="faqs" href="#">FAQs</a>
-        <div class="faqsdrop">
-          <a href="#">Criterias</a>
-          <a href="#">Legal</a>
-        </div>
+      </li>
+      <li>
+        <a class="team" href="#">Team</a>
       </li>
       <li>
         <a class="contact" href="#">Contact</a>
-        <div class="contactdrop">
-          <a href="#">Contact Us</a>
-          <a href="#">Donation</a>
-        </div>
       </li>
     </ul> 
   </nav>
@@ -125,7 +114,7 @@
     <div class="volunteer_content">
       <div class="volunteer_label">
         <h1>Mag-volunteer Na!</h1>
-        <h3>Basahin ang primer -></h3>
+        <h3>Basahin ang primer &#8594;</h3>
       </div>
       <a href="#">VOLUNTEER NOW</a>
       <div class="minimen">
