--- a/public/forms/weekly-reports.html
+++ b/public/forms/weekly-reports.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bantay Bayan</title>
-
 
   <meta name="description" content="" />
 
@@ -25,13 +24,12 @@
   <!-- initialize the SDK after all desired features are loaded -->
   <script defer src="/__/firebase/init.js"></script>
 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="../stylesheets/normalize.css">
-  <link rel="stylesheet" href="../stylesheets/main.css">
-  <link rel="stylesheet" href="../stylesheets/styles.css">
-
-
+  <link rel="stylesheet" href="/stylesheets/normalize.css" />
+  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <link rel="stylesheet" href="/stylesheets/styles.css" />
+  <link rel="stylesheet" href="/stylesheets/contact.css" />
 </head>
 
 <body>
@@ -75,6 +73,13 @@
     </ul>
   </nav>
 
+  <div class="container">
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLScbS4ntKWTHymvtEOBUTDkK_zFyR7WfwEiAjWPZhzKYJg0gAw/viewform?embedded=true"
+      style="width: 100%; height: 100%; overflow-x: hidden !important;" frameborder="0" marginheight="0"
+      marginwidth="0">Loading…</iframe>
+  </div>
+
   <footer>
     <div class="footerContent">
       <img src="/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
@@ -108,7 +113,6 @@
         <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
-  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
