styles edited links added to about page

--- a/public/about.html
+++ b/public/about.html
@@ -89,19 +89,19 @@
     </div>
     <div class="enm_bantaybayan_card1">
         <h1>1</h1>
-        <p>Nagsusulong ng transparency, accountability, at angkop na partisipasyon ng mga mamamayan</p>
+        <p>Nagsusulong ng <strong>transparency, accountability,</strong> at <strong>angkop na partisipasyon</strong> ng mga mamamayan</p>
     </div>
     <div class="enm_bantaybayan_card2">
       <h1>2</h1>
-      <p>Tumutugon sa mga pangangailangan ng mga mamamayan, lalo na ang mga higit na apektado ng krisis</p>
+      <p><strong>Tumutugon sa mga pangangailangan</strong> ng mga mamamayan, lalo na ang mga higit na apektado ng krisis</p>
     </div>
     <div class="enm_bantaybayan_card3">
       <h1>3</h1>
-      <p>Mabisang nagpapatupad ng mga programa at aksyon</p>
+      <p><strong>Mabisang nagpapatupad</strong> ng mga programa at aksyon</p>
     </div>
     <div class="enm_bantaybayan_card4">
         <h1>4</h1>
-        <p>Tinutupad ang karapatang pantao at mga alituntunin ng batas sa bawat hakbang</p>
+        <p>Tinutupad ang <strong>karapatang pantao</strong> at mga <strong>alituntunin ng batas</strong> sa bawat hakbang</p>
     </div>
   </div>
 
@@ -212,8 +212,8 @@
         <div class="partner_subcontent1_head">
           <img src="../assets/images/good_gov_logo.png" class="abt_good_gov_logo">
           <h4>GoodGovPH</h4>
-          <a href="#"><img src="../assets/images/about_fb.png" class="abt_fb_1"></a>
-          <a href="#"><img src="../assets/images/about_twitter.png" class="abt_twitter_1"></a>
+          <a href="https://facebook.com/BantayBayanTayo" target="_blank"><img src="../assets/images/about_fb.png" class="abt_fb_1"></a>
+          <a href="https://l.facebook.com/l.php?u=http%3A%2F%2Ftwitter.com%2FBantayBayanTayo%3Ffbclid%3DIwAR1XGVB-ntc44bMnby-eIy2M2PxsyXfxhafhCHt-gfrmQFuWewhdFv_Bzi8&h=AT2VaHz6xjRRLGQ4U1AhXaaHJ1joIIB_UgjrqD2nqNQj33cuhgoLPO34STyFcbMJFNg8pBQquCteBqRsFzSUqBegPJ18J-jDkgWkZsokoHSfS-1W8ELTeOxdE55cVKHi7qmbi2_IKpInrIvGfRfeSg" target="_blank"><img src="../assets/images/about_twitter.png" class="abt_twitter_1"></a>
         </div>
         <p>
           Ang GoodGov PH ay isang kilusan ng mga kabataang nagsusulong ng mabuting pamamahala 
@@ -229,8 +229,8 @@
         <div class="partner_subcontent2_head">
           <img src="../assets/images/dsc_loyola_logo.png" class="abt_dsc_logo">
           <h4>DSC - Loyola</h4>
-          <a href="#"><img src="../assets/images/about_fb.png" class="abt_fb_2"></a>
-          <a href="#"><img src="../assets/images/about_twitter.png" class="abt_twitter_2"></a>
+          <a href="https://www.facebook.com/dscloyola/" target="_blank"><img src="../assets/images/about_fb.png" class="abt_fb_2"></a>
+          <a href="https://twitter.com/dscloyola/" target="_blank"><img src="../assets/images/about_twitter.png" class="abt_twitter_2"></a>
         </div>
         <p>
           Developer Student Clubs Loyola is a student organization powered by Google Developers that aims 
@@ -254,16 +254,16 @@
         <img src="../assets/images/The Initiative PH 1.png" class="the_initiative_ph_logo">
         <h4>The Initiative PH</h4>
         <div>
-          <a href="#"><img src="../assets/images/about_fb.png" class="org_fb_2"></a>
-          <a href="#"><img src="../assets/images/about_twitter.png" class="org_twitter_2"></a>
+          <a href="#" target="_blank"><img src="../assets/images/about_fb.png" class="org_fb_2"></a>
+          <a href="#" target="_blank"><img src="../assets/images/about_twitter.png" class="org_twitter_2"></a>
         </div>
       </div>
       <div class="org2">
         <img src="../assets/images/Kadiwa 1.png" class="kadiwa_logo">
         <h4>Kadiwa Student Coaliton</h4>
         <div>
-          <a href="#"><img src="../assets/images/about_fb.png" class="org_fb_2"></a>
-          <a href="#"><img src="../assets/images/about_twitter.png" class="org_twitter_2"></a>
+          <a href="#" target="_blank"><img src="../assets/images/about_fb.png" class="org_fb_2"></a>
+          <a href="#" target="_blank"><img src="../assets/images/about_twitter.png" class="org_twitter_2"></a>
         </div>
       </div>
     </div>
