--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
       <img src="/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
       <div class="footerSubContent">
         <div class="footerIcons">
-          <a href="https://www.facebook.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
               <path
@@ -143,7 +143,7 @@
             </svg>
           </a>
 
-          <a href="https://www.twitter.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
               <path
@@ -162,8 +162,6 @@
         <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
-
-  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
