--- a/public/forms/help-desk.html
+++ b/public/forms/help-desk.html
@@ -57,7 +57,7 @@
         <div class="forms">Forms</div>
         <div class="formsdrop">
           <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
-          <a href="/public/forms/complaints.html">Complaints</a>
+          <a href="/public/forms/help-desk.html">Help Desk</a>
           <a href="/public/forms/volunteers.html">Volunteers</a>
         </div>
       </li>
@@ -75,7 +75,7 @@
 
   <div class="container">
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLScbS4ntKWTHymvtEOBUTDkK_zFyR7WfwEiAjWPZhzKYJg0gAw/viewform?embedded=true"
+      src="https://docs.google.com/forms/d/e/1FAIpQLSdt7A1xD4Yg6YYWJqeqWLyGJARLr0GspZ9TmNinLqLeEXt1XQ/viewform?embedded=true"
       style="width: 100%; height: 100%; overflow-x: hidden !important;" frameborder="0" marginheight="0"
       marginwidth="0">Loading…</iframe>
   </div>
