--- a/public/forms/volunteers.html
+++ b/public/forms/volunteers.html
@@ -57,7 +57,7 @@
                 <div class="forms">Forms</div>
                 <div class="formsdrop">
                     <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
-                    <a href="/public/forms/complaints.html">Complaints</a>
+                    <a href="/public/forms/help-desk.html">Help Desk</a>
                     <a href="/public/forms/volunteers.html">Volunteers</a>
                 </div>
             </li>
