--- a/public/contact.html
+++ b/public/contact.html
@@ -1,245 +1,179 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bantay Bayan</title>
 
-    <meta name="description" content="" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bantay Bayan</title>
 
-    <!-- Facebook Meta -->
-    <meta property="og:title" content="Bantay Bayan" />
-    <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="http://uxchill.uxsociety.org/uxchillmetadata.png" /> -->
-    <meta property="og:description" content="" />
+  <meta name="description" content="" />
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.14.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.14.0/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.14.0/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.14.0/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+  <!-- Facebook Meta -->
+  <meta property="og:title" content="Bantay Bayan" />
+  <meta property="og:type" content="website" />
+  <!-- <meta property="og:image" content="http://uxchill.uxsociety.org/uxchillmetadata.png" /> -->
+  <meta property="og:description" content="" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/7.14.0/firebase-auth.js"></script>
+  <script defer src="/__/firebase/7.14.0/firebase-database.js"></script>
+  <script defer src="/__/firebase/7.14.0/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/7.14.0/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
 
-    <link rel="stylesheet" href="../stylesheets/normalize.css" />
-    <link rel="stylesheet" href="../stylesheets/main.css" />
-    <link rel="stylesheet" href="../stylesheets/styles.css" />
-    <link rel="stylesheet" href="../stylesheets/contact.css" />
-  </head>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <body>
-    <nav>
-      <label for="check" class="burger_icon">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-      </label>
+  <link rel="stylesheet" href="../stylesheets/normalize.css" />
+  <link rel="stylesheet" href="../stylesheets/main.css" />
+  <link rel="stylesheet" href="../stylesheets/styles.css" />
+  <link rel="stylesheet" href="../stylesheets/contact.css" />
+</head>
 
-      <input type="checkbox" class="checkbox" id="check" />
+<body>
+  <nav>
+    <label for="check" class="burger_icon">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </label>
 
-      <a href="/public/">
-        <img
-          src="/assets/images/bantay_bayan_logo.png"
-          class="navLogo"
-          alt="logo"
-        />
-      </a>
+    <input type="checkbox" class="checkbox" id="check" />
 
-      <ul class="page_menu">
-        <li>
-          <!--Buffer-->
-        </li>
-        <li>
-          <a class="about" href="/public/about.html">About</a>
-        </li>
-        <li>
-          <div class="forms">Forms</div>
-          <div class="formsdrop">
-            <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
-            <a href="/public/forms/complaints.html">Complaints</a>
-            <a href="/public/forms/volunteers.html">Volunteers</a>
+    <a href="/public/">
+      <img src="/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
+    </a>
+
+    <ul class="page_menu">
+      <li>
+        <!--Buffer-->
+      </li>
+      <li>
+        <a class="about" href="/public/about.html">About</a>
+      </li>
+      <li>
+        <div class="forms">Forms</div>
+        <div class="formsdrop">
+          <a href="/public/forms/weekly-reports.html">Weekly Reports</a>
+          <a href="/public/forms/help-desk.html">Help Desk</a>
+          <a href="/public/forms/volunteers.html">Volunteers</a>
+        </div>
+      </li>
+      <li>
+        <a class="faqs" href="/public/faqs.html">FAQs</a>
+      </li>
+      <li>
+        <a class="team" href="/public/teams.html">Team</a>
+      </li>
+      <li>
+        <a class="contact" href="/public/contact.html">Contact</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div id="contact">
+    <div id="contact-wrapper" class="contact-wrapper">
+      <h4>Bantay <span>Bayan</span></h4>
+      <h1>Contact & Partnership Form</h1>
+
+      <form id="contact-form">
+        <div id="form-box">
+          <div class="form-group">
+            <label>Pangalan / Pangalan ng Organisasyon</label>
+            <input type="text" name="Pangalan / Pangalan ng Organisasyon" />
           </div>
-        </li>
-        <li>
-          <a class="faqs" href="/public/faqs.html">FAQs</a>
-        </li>
-        <li>
-          <a class="team" href="/public/teams.html">Team</a>
-        </li>
-        <li>
-          <a class="contact" href="/public/contact.html">Contact</a>
-        </li>
-      </ul>
-    </nav>
-
-    <div id="contact">
-      <div id="contact-wrapper" class="contact-wrapper">
-        <h4>Bantay <span>Bayan</span></h4>
-        <h1>Contact & Partnership Form</h1>
-
-        <form id="contact-form">
-          <div id="form-box">
-            <div class="form-group">
-              <label>Pangalan / Pangalan ng Organisasyon</label>
-              <input type="text" name="Pangalan / Pangalan ng Organisasyon" />
-            </div>
-            <div class="form-group">
-              <label>Email</label>
-              <input type="email" name="Email" />
-            </div>
-            <div class="form-group">
-              <label>Subject</label>
-              <input type="text" name="Subject" />
-            </div>
-            <div class="form-group">
-              <label>Message</label>
-              <textarea name="Message" cols="30" rows="10"></textarea>
-            </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" name="Email" />
           </div>
-          <div class="flex-end">
-            <button type="submit">Send Message</button>
+          <div class="form-group">
+            <label>Subject</label>
+            <input type="text" name="Subject" />
           </div>
-        </form>
-      </div>
-      <div class="contact-wrapper">
-        <div id="hatid-wrapper">
-          <div>
-            <h2>
-              Ang Bantay Bayan ay hatid sa inyo ng mga sumusunod na
-              organisasyon:
-            </h2>
-            <div class="flex-images">
-              <img src="/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
-              <img src="/assets/icons/DSC.png" alt="DSC Loyola" />
-              <img
-                src="/assets/icons/The Initiative PH.png"
-                alt="Initiative PH"
-              />
-              <img src="/assets/icons/Kadiwa.png" alt="Kadiwa" />
-            </div>
+          <div class="form-group">
+            <label>Message</label>
+            <textarea name="Message" cols="30" rows="10"></textarea>
           </div>
+        </div>
+        <div class="flex-end">
+          <button type="submit">Send Message</button>
+        </div>
+      </form>
+    </div>
+    <div class="contact-wrapper">
+      <div id="hatid-wrapper">
+        <div>
+          <h2>
+            Ang Bantay Bayan ay hatid sa inyo ng mga sumusunod na
+            organisasyon:
+          </h2>
+          <div class="flex-images">
+            <img src="/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
+            <img src="/assets/icons/DSC.png" alt="DSC Loyola" />
+            <img src="/assets/icons/The Initiative PH.png" alt="Initiative PH" />
+            <img src="/assets/icons/Kadiwa.png" alt="Kadiwa" />
+          </div>
+        </div>
 
-          <div>
-            <h2>Maaaring makipag-ugnayan kay:</h2>
-            <br />
-            <div id="contact-details">
-              <h2>Ashley De Quiroz</h2>
-              <p>Direktor, Bantay Bayan</p>
-              <p>0977 163 9979</p>
-              <a href="mailto:goodgovph.official@gmail.com"
-                >goodgovph.official@gmail.com</a
-              >
-              <div id="social-media">
-                <a
-                  href="https://www.facebook.com/GoodGovPH/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <img src="/assets/icons/facebook.png" alt="facebook" />
-                </a>
-                <a
-                  href="https://www.twitter.com/GoodGovPH/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <img src="/assets/icons/twitter.png" alt="twitter" />
-                </a>
-              </div>
+        <div>
+          <h2>Maaaring makipag-ugnayan kay:</h2>
+          <br />
+          <div id="contact-details">
+            <h2>Ashley De Quiroz</h2>
+            <p>Direktor, Bantay Bayan</p>
+            <p>0977 163 9979</p>
+            <a href="mailto:goodgovph.official@gmail.com">goodgovph.official@gmail.com</a>
+            <div id="social-media">
+              <a href="https://www.facebook.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
+                <img src="/assets/icons/facebook.png" alt="facebook" />
+              </a>
+              <a href="https://www.twitter.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
+                <img src="/assets/icons/twitter.png" alt="twitter" />
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <footer>
-      <div class="footerContent">
-        <img
-          src="/assets/images/bantay_bayan_logo.png"
-          alt="logo"
-          width="170"
-        />
-        <div class="footerSubContent">
-          <div class="footerIcons">
-            <a
-              href="https://www.facebook.com/BantayBayanTayo"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg
-                width="48"
-                height="48"
-                viewBox="0 0 48 48"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle
-                  cx="24"
-                  cy="24"
-                  r="23"
-                  stroke="#333333"
-                  stroke-width="2"
-                />
-                <path
-                  d="M29.5 13.1666H26.25C24.8134 13.1666 23.4357 13.7373 22.4198 14.7531C21.404 15.769 20.8333 17.1467 20.8333 18.5833V21.8333H17.5833V26.1666H20.8333V34.8333H25.1667V26.1666H28.4167L29.5 21.8333H25.1667V18.5833C25.1667 18.296 25.2808 18.0204 25.484 17.8173C25.6871 17.6141 25.9627 17.5 26.25 17.5H29.5V13.1666Z"
-                  stroke="#333333"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
+  <footer>
+    <div class="footerContent">
+      <img src="/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+      <div class="footerSubContent">
+        <div class="footerIcons">
+          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
+              <path
+                d="M29.5 13.1666H26.25C24.8134 13.1666 23.4357 13.7373 22.4198 14.7531C21.404 15.769 20.8333 17.1467 20.8333 18.5833V21.8333H17.5833V26.1666H20.8333V34.8333H25.1667V26.1666H28.4167L29.5 21.8333H25.1667V18.5833C25.1667 18.296 25.2808 18.0204 25.484 17.8173C25.6871 17.6141 25.9627 17.5 26.25 17.5H29.5V13.1666Z"
+                stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </a>
 
-            <a
-              href="https://www.facebook.com/BantayBayanTayo"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg
-                width="48"
-                height="48"
-                viewBox="0 0 48 48"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle
-                  cx="24"
-                  cy="24"
-                  r="23"
-                  stroke="#333333"
-                  stroke-width="2"
-                />
-                <path
-                  d="M35 15C34.0424 15.6755 32.9821 16.1922 31.86 16.53C31.2577 15.8376 30.4573 15.3467 29.567 15.124C28.6767 14.9012 27.7395 14.9572 26.8821 15.2845C26.0247 15.6118 25.2884 16.1944 24.773 16.9538C24.2575 17.7131 23.9877 18.6124 24 19.53V20.53C22.2426 20.5756 20.5013 20.1859 18.931 19.3955C17.3607 18.6051 16.0103 17.4387 15 16C15 16 11 25 20 29C17.9405 30.398 15.4872 31.099 13 31C22 36 33 31 33 19.5C32.9991 19.2215 32.9723 18.9436 32.92 18.67C33.9406 17.6635 34.6608 16.3928 35 15V15Z"
-                  stroke="#333333"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </a>
-          </div>
-          <label>&copy; 2020 GoodGovPH. All Rights Reserved.</label>
+          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
+              <path
+                d="M35 15C34.0424 15.6755 32.9821 16.1922 31.86 16.53C31.2577 15.8376 30.4573 15.3467 29.567 15.124C28.6767 14.9012 27.7395 14.9572 26.8821 15.2845C26.0247 15.6118 25.2884 16.1944 24.773 16.9538C24.2575 17.7131 23.9877 18.6124 24 19.53V20.53C22.2426 20.5756 20.5013 20.1859 18.931 19.3955C17.3607 18.6051 16.0103 17.4387 15 16C15 16 11 25 20 29C17.9405 30.398 15.4872 31.099 13 31C22 36 33 31 33 19.5C32.9991 19.2215 32.9723 18.9436 32.92 18.67C33.9406 17.6635 34.6608 16.3928 35 15V15Z"
+                stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </a>
         </div>
+        <label>&copy; 2020 GoodGovPH. All Rights Reserved.</label>
       </div>
+    </div>
 
-      <div class="footerDSC">
-        <hr />
-        <label
-          >Passionately Designed and
-          <a href="https://dscadmu.org"
-            >Developed by Developer Student Clubs Loyola</a
-          ></label
-        >
-      </div>
-    </footer>
-    <script src="/scripts/jquery.min.js"></script>
-    <script src="/scripts/index.js"></script>
-  </body>
+    <div class="footerDSC">
+      <hr />
+      <label>Passionately Designed and
+        <a href="https://dscadmu.org">Developed by Developer Student Clubs Loyola</a></label>
+    </div>
+  </footer>
+  <script src="/scripts/jquery.min.js"></script>
+  <script src="/scripts/index.js"></script>
+</body>
+
 </html>
