--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
 
   <footer>
     <div class="footerContent">
-      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" className="footerLogo" />
       <div class="footerSubContent">
         <div class="footerIcons">
           <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
