style revised accrding to pat, links given to hompage hrefs, screen s… (#5)
* style revised accrding to pat, links given to hompage hrefs, screen size adjustments finished

* footer fix

Co-authored-by: Hjkun77 <harveyjaysison@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="/">
+    <a href="index.html">
       <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
@@ -92,7 +92,7 @@
         Gamit ang Bantay Bayan Helpdesk, maaaring mag-sumite ng tanong o reklamo ang bawat mamamayan ukol sa
         pag-responde ng LGU sa <br> COVID-19.
       </p>
-      <a href="#">SEEK LEGAL AID</a>
+      <a href="help-desk.html">SEEK LEGAL AID</a>
     </div>
 
     <img src="./src/assets/images/Image.png" class="helpdesk_pic">
@@ -108,7 +108,7 @@
       <p>
         Gamit ang isang diagnostic tool (survey), linggo-linggong inaaseso ng bawat bantay-bayan ang LGU base.
       </p>
-      <a href="#">SUBMIT LGU RESPONSE</a>
+      <a href="weekly-reports.html">SUBMIT LGU RESPONSE</a>
     </div>
   </div>
 
@@ -118,7 +118,7 @@
         <h1>Mag-volunteer Na!</h1>
         <h3>Basahin ang primer &#8594;</h3>
       </div>
-      <a href="#">VOLUNTEER NOW</a>
+      <a href="volunteers.html">VOLUNTEER NOW</a>
       <div class="minimen">
         <img src="./src/assets/images/Volunteers.png">
         <img src="./src/assets/images/Volunteers.png">
@@ -131,7 +131,7 @@
 
   <footer>
     <div class="footerContent">
-      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" />
+      <img src="./src/assets/images/bantay_bayan_logo.png" alt="logo" width="170" className="footerLogo" />
       <div class="footerSubContent">
         <div class="footerIcons">
           <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
