Complete DSC pics

--- a/public/teams.html
+++ b/public/teams.html
@@ -210,7 +210,7 @@
           <h5>WEB DEVELOPMENT</h5>
         </div>
         <div class="member">
-          <img src="./src/assets/members/download.png" alt="member">
+          <img src="./src/assets/members/Ramos_DSC.jpg" alt="member">
           <h3>Patricia Ramos</h3>
           <h5>UX DESIGN</h5>
         </div>
